assets/styles/forgot_password.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');


html,body{
  font-family:'Nunito',sans-serif;
  background-color: white;
}

#myDIV{
  font-weight: 500;
  font-size: 25px;
  text-align: center;
  margin-top: 30px;
}

.container-wrapper{
    display: flex;
    flex-direction: column;
    background-color:white;
    margin:auto;
    margin-top: 50px;
    width:450px;
    align-items: center;
    height: 400px;
    justify-content: center;
    border-radius:10px;
    box-shadow:0px 0px 2px #888888;  
}

header{
  margin-top: 0;
  color:#2f3640;
  font-weight:800;
  font-size: 30px;
}

input{
    margin: 10px 0;  
    outline: none;    
}
.input-style{
  width: 360px;
  text-align:center;
  padding:15px;
  background-color:white;
  font-weight:500;
  border-radius: 5px;
  border: 2px solid rgba(0, 0, 0, 0.1);
  font-size:16px;
  color:#2f3640;
}

.input-style:focus{
  box-shadow: 0 0 3px rgb(47	,47	,47);
}

.labeling{
font-weight: bold;
color:#2f3640;
}

::placeholder{
color:#95a5a6;
}

#container-1{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 25vw;   
    margin-top: 30px;
}

#container-2{
    display: flex;
    display: none;
    flex-direction: column;
    align-items: center;
    width: 25vw;
}

.button1{
    color:white;
    text-align: center;
    border-radius: 10px;
    border-style: none;
    background-color:/*#ec2c36
    ;*/rgba(192,22,22,0.9);
    font-weight:600;
    font-size: 12px;
    width:360px;
    height: 45px;
    margin-right: 20px;
}

.button1:hover{
  cursor: pointer;
  transition: delay 2s;
  opacity: 0.7;
}

.return_login{
    text-align: center;
    text-decoration: none;
    color: rgba(192,22,22,0.9);
    margin-bottom: 10px;
    font-weight: 600;
}


      
  
  
  

